--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,14 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - Image/B-and-E.png
+    - Image/logo.jpg
+    - Image/dog.jpg
+    - Image/robbery.jpg
+    - Image/car.jpg
+    - Image/court.jpeg
+    - Image/gym.jpeg
+    - Image/restoran.jpeg
+    - Image/supermarket.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
