--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,7 @@ flutter:
     - Image/gym.jpeg
     - Image/restoran.jpeg
     - Image/supermarket.jpeg
+    - Image/hand.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
